<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/page_title_color"
        android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:contentDescription="@string/app_name"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/selector_back_icon" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:text="@string/group_purchase_detail_title"
                android:gravity="center_vertical"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="17sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_detail"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_appointment_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/group_purchase_amount"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/purchaseQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@+id/tv_appointment_amount"
            android:text=""
            android:textColor="@color/page_title_color"
            android:textSize="14sp" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="14sp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@+id/purchaseQty"
                android:textColor="#979797" />

        <Button
            android:id="@+id/btn_appointment"
            android:layout_width="68dp"
            android:layout_height="31.5dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_purchase_appointment"
            android:text="@string/group_purchase_appointment"
            android:textSize="19sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/rest_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_appointment_amount"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="9dp"
            android:text="@string/group_purchase_date"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/purchaseQty"
            android:layout_marginTop="9dp"
            android:layout_toRightOf="@+id/rest_time"
            android:textColor="@color/page_title_color" />

        <WebView
            android:id="@+id/webView"
            android:layout_marginRight="20dp"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="16dp"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rest_time"/>
    </RelativeLayout>
</RelativeLayout>