<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="86px"
        android:background="@color/page_title_color_new"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_back"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/verify_serial_number"
            android:id="@+id/mTitle"
            android:textColor="@color/home_item_color"
            android:textSize="18sp" />
   </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25.5dp"
        android:layout_marginRight="22.5dp"
        android:layout_marginTop="53dp"
        android:background="@drawable/input_number_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/verify_serial_number_hint"
            android:textColor="@color/home_item_color"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:inputType="number"
            android:paddingLeft="16dp"

            android:cursorVisible="true"
            android:layout_marginRight="6dp"
            android:textColor="@color/home_item_color"
            android:textSize="17sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/layout"
        android:background="@drawable/selector_verify_button"
        android:text="@string/verify_button"
        android:textColor="@color/home_item_color" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_heightPercent="16.66%w"
        app:layout_widthPercent="16.66%w"
        android:background="@drawable/selector_park"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        app:layout_marginRightPercent="4.16%w"
        app:layout_marginBottomPercent="12.5%w"
        android:id="@+id/changePark"
        android:visibility="gone"
        />
</com.zhy.autolayout.AutoRelativeLayout>
 