<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/login_bg">


    <ImageView
        android:id="@+id/image"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_name"
        android:background="@drawable/logo_ic" />
<View
    android:layout_width="512px"
    android:layout_height="1px"
    android:background="@color/gray_text"
    android:layout_marginTop="582px"

    android:layout_centerHorizontal="true"
    >

</View>

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/llItem01"
     android:layout_marginTop="512px"
        android:layout_width="match_parent"
        android:layout_height="60px"


        android:orientation="horizontal"
>

        <ImageView
            android:layout_width="39px"
            android:layout_height="30px"
           android:layout_marginLeft="110px"
            android:gravity="center"
            android:padding="0dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/login_acount_icon"
            android:textColor="#4cacde"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/login_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
           android:layout_marginLeft="38px"
            android:background="@color/transparent"
            android:hint="@string/login_hint"

            android:textColor="@color/login_gray_text"
            android:singleLine="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/gray_text"
            android:textSize="28px" />
    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/llItem02"
        android:layout_marginTop="626px"
        android:layout_width="wrap_content"
        android:layout_height="71px"




        android:orientation="horizontal">

        <ImageView
            android:layout_width="36px"
            android:layout_height="41px"
            android:layout_marginLeft="110px"
            android:gravity="center"
            android:background="@drawable/login_password_icon"
            android:text="@string/login_password"
            android:textColor="#4cacde"
            android:layout_gravity="center_vertical"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="363px"
            android:layout_height="match_parent"

            android:background="@color/transparent"
            android:inputType="textPassword"

            android:hint="密码  请输入密码"
            android:layout_marginLeft="38px"
            android:focusableInTouchMode="true"

            android:textColorHint="@color/gray_text"
            android:textColor="@color/login_gray_text"
            android:textSize="28px" />
        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="71px"
            android:id="@+id/eyeLayout"
            android:layout_height="match_parent">
<ImageView
    android:layout_width="27px"
    android:layout_height="18px"
    android:background="@drawable/selector_login_eye"
    android:layout_centerInParent="true"
    />
        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoLinearLayout>
    <View
        android:layout_width="512px"
        android:layout_height="1px"
        android:background="@color/gray_text"
        android:layout_marginTop="707px"
        android:id="@+id/line"
        android:layout_centerHorizontal="true"
        >

    </View>

    <Button
        android:id="@+id/login"
        android:layout_below="@+id/line"
        android:layout_width="512px"
        android:layout_height="90px"
        android:layout_centerHorizontal="true"
         android:layout_marginTop="64px"
        android:background="@drawable/selector_btn_login"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="32px"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60px"
        android:text="@string/login_forget_password"
        android:textColor="@color/gray_text"
        android:textSize="28px"
        />

</com.zhy.autolayout.AutoRelativeLayout>
