<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/page_title_color_new"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_back"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/main_item01"
            android:layout_centerHorizontal="true"
            android:textColor="@color/home_item_color"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_back"
            android:contentDescription="@string/app_name"
            android:visibility="invisible" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@+id/title"
        android:background="@color/home_item_color"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/task_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/task_title_right"

            android:textColor="@color/page_title_color"
            android:textSize="17sp" />


        <View
            android:layout_width="1dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="9dp"
            android:layout_marginTop="10.5dp"
            android:background="#d5d5d5" />


        <TextView
            android:id="@+id/task_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/task_title_left"
            android:textColor="@color/text_color02"
            android:textSize="17sp" />
        <!--<View-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:layout_marginTop="9dp"-->
            <!--android:background="#d5d5d5"/>-->
        <!--<TextView-->
            <!--android:id="@+id/tack_attention"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/tack_tack_attention"-->
            <!--android:textColor="@color/text_color02"-->
            <!--android:textSize="17sp" />-->

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_cursor"
        android:layout_below="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d5d5d5"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cursor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/course_ic"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_cursor"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_heightPercent="16.66%w"
        app:layout_widthPercent="16.66%w"
        android:background="@drawable/selector_park"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        app:layout_marginRightPercent="4.16%w"
        app:layout_marginBottomPercent="12.5%w"
        android:id="@+id/changePark"
        android:visibility="gone"
        />
</com.zhy.android.percent.support.PercentRelativeLayout>