<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/albumback" >

    <RelativeLayout
        android:id="@+id/headview"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/page_title_color"
        android:gravity="center_vertical">
        <Button
            android:textSize="14sp"
            android:textColor="#fff"
            android:id="@+id/gallery_back"
            android:text="@string/album"
            android:background="@null"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true" />
        <TextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:text="/"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/no_pic"
            android:layout_width="wrap_content"
             android:text="1"
            android:textSize="14sp"
            android:layout_toLeftOf="@+id/tip"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/total_pic"
            android:layout_width="wrap_content"
            android:text="1"
            android:textSize="14sp"
            android:layout_toRightOf="@+id/tip"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_height="match_parent" />
        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:contentDescription="@string/app_name"
            android:visibility="gone"
            android:background="@drawable/selector_white_back"
            android:layout_height="wrap_content" />
        <Button
            android:textSize="14sp"
            android:textColor="#fff"
            android:id="@+id/gallery_del"
            android:background="@drawable/plugin_camera_del_state"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    
     <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/plugin_camera_bottom_bar" >
 		
        <Button
            android:id="@+id/send_button"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:background="@color/page_title_color"/>

    </RelativeLayout>
    
    <com.joyhome.nacity.app.photo.zoom.ViewPagerFixed
      android:id="@+id/gallery01"
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:layout_above="@id/bottom_layout"
      android:layout_below="@id/headview"
      android:layout_centerHorizontal="true"
      android:background="@color/plugin_camera_black"
      android:unselectedAlpha="1"/>

   
</RelativeLayout>
  